fix images in messages